Add top-level package.json for Netlify deployment
- Add root package.json with @google/generative-ai dependency
- Update build command to install dependencies at root level
- Update documentation with new build configuration
- Ensure Netlify has access to all required dependencies

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  # Build command (not needed for static sites, but good to have)
-  command = "cd nodejs-app && npm install"
+  # Build command - install dependencies at root level
+  command = "npm install && cd nodejs-app && npm install"
   
   # Directory to publish (where the static files are)
   publish = "nodejs-app/public"
