Fix image display for Netlify deployment
- Copy images from root to public directory during build
- Update HTML to reference images directly (no /images path)
- Update build command to include image copying
- Maintain backward compatibility for local development
- Update documentation with new build process

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  # Build command - install dependencies at root level
-  command = "npm install && cd nodejs-app && npm install"
+  # Build command - install dependencies and copy images
+  command = "npm install && cd nodejs-app && npm install && cp ../*.png public/"
   
   # Directory to publish (where the static files are)
   publish = "nodejs-app/public"
