--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -18,10 +18,10 @@
   "author": "Alejandra Florentin",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "path": "^0.12.7",
-    "@google/generative-ai": "^0.2.1",
-    "dotenv": "^16.3.1"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
