--- a/netlify.toml
+++ b/netlify.toml
@@ -12,21 +12,17 @@
   # Node.js version
   NODE_VERSION = "18"
 
-# Redirect all routes to index.html for SPA behavior (except functions and assets)
+# Simple SPA redirect - only for non-existing files
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-  force = false
 
-# Headers for security
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
+# Headers removed temporarily to fix post-processing hang
+# [[headers]]
+#   for = "/*"
+#   [headers.values]
+#     X-Frame-Options = "DENY"
 
 # Environment variables (will be set in Netlify dashboard)
 # GEMINI_API_KEY = "your_api_key_here"
